# barebone-cpp-tdd

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean_cache.sh  cppcheck_suppressions_list.txt  gcc_build_and_run_uit.sh  initial_cache.cmake  run_clang_format.sh  run_clang_tidy.sh  run_cppcheck.sh
include/: main_barebone_TDD.h
include/core/: barebone_TDD.h
src/: main_barebone_TDD.cpp
src/core/: barebone_TDD.cpp
test/: CMakeLists.txt
test/CppUTestOverride/: .clang-format  NewMacros.h
test/uit/: CMakeLists.txt  run_integration.cpp
test/ut/: CMakeLists.txt  barebone_TDD_test.cpp
